--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ethers": "^6.15.0",
     "lodash": "^4.17.21",
     "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "typechain": "^8.3.2"
   },
   "devDependencies": {
