--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.74.0",
     "@typechain/ethers-v6": "^0.5.1",
     "dotenv": "^17.2.3",
     "ethers": "^6.15.0",
