refactor: rename RPC environment variables for consistency in workflow files

--- a/.github/workflows/manual-run.yml
+++ b/.github/workflows/manual-run.yml
@@ -34,7 +34,7 @@ jobs:
         run: npm run start
         env:
           NODE_ENV: ${{ github.event.inputs.environment }}
-          RPC_URL_BASE: ${{ secrets.RPC_URL_BASE }}
-          RPC_URL_ARBITRUM: ${{ secrets.RPC_URL_ARBITRUM }}
+          BASE_RPC: ${{ secrets.RPC_URL_BASE }}
+          ARB1_RPC: ${{ secrets.RPC_URL_ARBITRUM }}
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
