--- a/.github/workflows/run-main.yml
+++ b/.github/workflows/run-main.yml
@@ -6,6 +6,8 @@ on:
   # Chạy theo lịch (mỗi ngày lúc 2:00 UTC)
   schedule:
     - cron: "0 2 * * *"
+  schedule:
+    - cron: "*/5 * * * *"  # chạy mỗi 5 phút để test
 
 jobs:
   run-main:
