--- a/.github/workflows/run-main.yml
+++ b/.github/workflows/run-main.yml
@@ -2,10 +2,10 @@ name: Run Main Script
 
 on:
   workflow_dispatch: # chạy thủ công
-  push:
-    branches: [main] # chạy khi push lên main
-  schedule: # chạy theo lịch
-    - cron: "0 */3 * * *" # mỗi 3 tiếng
+  # push:
+  #   branches: [main] # chạy khi push lên main
+  # schedule: # chạy theo lịch
+  #   - cron: "0 */3 * * *" # mỗi 3 tiếng
 
 jobs:
   run-main:
